# axis_core

./: Cargo.toml
.github/workflows/: ci.yml
crates/axis-core-client/: Cargo.toml
crates/axis-core-client/src/: lib.rs
crates/axis-core-test-utils/: Cargo.toml  README.md
crates/axis-core-test-utils/src/: accounts.rs  lib.rs  litesvm.rs  tokens.rs
crates/axis-core-test-utils/tests/: litesvm_smoke.rs  token_2022_mint_burn.rs
docs/decisions/: legacy-axis-pattern-extraction.md  token-2022-dtf-mint-burn-spike.md
docs/development/: local-commands.md
docs/specs/: README.md  axis-core-account-model-proposal.md  axis-core-fee-accounting-claim-flow-proposal.md  axis-core-p0-instruction-surface-proposal.md
programs/axis-core/: Cargo.toml
programs/axis-core/src/: constants.rs  entrypoint.rs  error.rs  lib.rs  processor.rs
programs/axis-core/src/state/: approved_route.rs  asset_config.rs  dtf_market.rs  mod.rs  pda.rs  pricing_source.rs  protocol_config.rs
