[package]
name = "axis-core-test-utils"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
litesvm = "0.13.0"
sha2 = "0.10"
solana-address = "=2.2.0"
solana-keypair = "3.1"
solana-program-pack = "3.1"
solana-system-interface = { version = "3.1", features = ["bincode"] }
solana-transaction = { version = "3.1", features = ["verify"] }
spl-token-2022-interface = "2.0"
thiserror = "2.0"
