[package]
name = "axis-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["lib"]

[features]
default = []
bpf-entrypoint = []

[dependencies]
pinocchio.workspace = true

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']
